syntax = "proto3";
package musechain.musecore.observer;

import "gogoproto/gogo.proto";

option go_package = "github.com/RWAs-labs/muse/x/observer/types";

// store key is tss+chainid+nonce
message NonceToCctx {
  int64 chain_id = 1;
  int64 nonce = 2;
  string cctxIndex = 3;
  string tss = 4;
}
